; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_ijkMediaPlayer_setPropertyFloat.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_ijkMediaPlayer_setPropertyFloat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"mpjni: setPropertyFloat: null mp\00", align 1
@LABEL_RETURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @ijkMediaPlayer_setPropertyFloat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ijkMediaPlayer_setPropertyFloat(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32* @jni_get_media_player(i32* %10, i32 %11)
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* @LABEL_RETURN, align 4
  %16 = call i32 @JNI_CHECK_GOTO(i32* %13, i32* %14, i32* null, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @ijkmp_set_property_float(i32* %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %4
  %22 = call i32 @ijkmp_dec_ref_p(i32** %9)
  ret void
}

declare dso_local i32* @jni_get_media_player(i32*, i32) #1

declare dso_local i32 @JNI_CHECK_GOTO(i32*, i32*, i32*, i8*, i32) #1

declare dso_local i32 @ijkmp_set_property_float(i32*, i32, i32) #1

declare dso_local i32 @ijkmp_dec_ref_p(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
